--- a/package.json
+++ b/package.json
@@ -9,26 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
+    "@prisma/client": "^6.7.0",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.36.0",
+    "bcrypt": "^6.0.0",
+    "drizzle-orm": "^0.43.1",
     "framer-motion": "^10.16.4",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "next": "14.0.0",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.8.2",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
     "eslint-config-next": "14.0.0",
     "postcss": "^8.4.31"
   }
-} 
+}
